--- a/citations.bib
+++ b/citations.bib
@@ -481,6 +481,18 @@
   doi={doi:10.1038/leu.2016.247}
 }
 
+@inproceedings{hundal2016cancer,
+  title={Cancer immunogenomics: computational neoantigen identification and vaccine design},
+  author={Hundal, Jasreet and Miller, Christopher A and Griffith, Malachi and Griffith, Obi L and Walker, Jason and Kiwala, Susanna and Graubert, Aaron and McMichael, Joshua and Coffman, Adam and Mardis, Elaine R},
+  booktitle={Cold Spring Harbor symposia on quantitative biology},
+  volume={81},
+  pages={105--111},
+  year={2016},
+  organization={Cold Spring Harbor Laboratory Press},
+  url={http://symposium.cshlp.org/content/81/105.abstract},
+  doi={doi:10.1101/sqb.2016.81.030726}
+}
+
 @article{griffith2016truncating,
   title={Truncating Prolactin Receptor Mutations Promote Tumor Growth in Murine Estrogen Receptor-Alpha Mammary Carcinomas},
   author={Griffith, Obi L and Chan, Szeman Ruby and Griffith, Malachi and Krysiak, Kilannin and Skidmore, Zachary L and Hundal, Jasreet and Allen, Julie A and Arthur, Cora D and Runci, Daniele and Bugatti, Mattia and others},
@@ -592,6 +604,17 @@
   publisher={American Society of Hematology},
   doi={doi:10.1182/blood-2016-07-729954},
   url={http://www.bloodjournal.org/content/129/4/473}
+}
+
+@article{zhang2017breast,
+  title={Breast cancer neoantigens can induce CD8 T cell responses and antitumor immunity},
+  author={Zhang, Xiuli and Kim, Samuel and Hundal, Jasreet and Herndon, John M and Li, Shunqiang and Petti, Allegra A and Soysal, Savas D and Li, Lijin and McLellan, Michael D and Hoog, Jeremy and others},
+  journal={Cancer immunology research},
+  pages={canimm--0264},
+  year={2017},
+  publisher={American Association for Cancer Research},
+  url={http://cancerimmunolres.aacrjournals.org/content/early/2017/06/14/2326-6066.CIR-16-0264},
+  doi={doi:10.1158/2326-6066.CIR-16-0264}
 }
 
 @article{zhang2017comprehensive,
@@ -735,6 +758,18 @@
   url={https://www.nature.com/articles/s41375-018-0065-5}
 }
 
+@article{jacoby2018subclones,
+  title={Subclones dominate at MDS progression following allogeneic hematopoietic cell transplant},
+  author={Jacoby, Meagan A and Duncavage, Eric J and Chang, Gue Su and Miller, Christopher A and Shao, Jin and Elliott, Kevin and Robinson, Joshua and Fulton, Robert S and Fronick, Catrina C and O’Laughlin, Michelle and others},
+  journal={JCI insight},
+  volume={3},
+  number={5},
+  year={2018},
+  publisher={American Society for Clinical Investigation},
+  url={https://www.ncbi.nlm.nih.gov/pmc/articles/PMC5922277/},
+  doi={doi:10.1172/jci.insight.98962]}
+}
+
 @article{rohan2018somatic,
   title={Somatic mutations in benign breast disease tissue and risk of subsequent invasive breast cancer},
   author={Rohan, Thomas E and Miller, Christopher A and Li, Tiandao and Wang, Yihong and Loudig, Olivier and Ginsberg, Mindy and Glass, Andrew and Mardis, Elaine},
@@ -791,4 +826,17 @@
   publisher={Cold Spring Harbor Laboratory},
   doi={doi:10.1101/434746},
   url={https://www.biorxiv.org/content/early/2018/10/17/434746.1}
+}
+
+@article{duncavage2018mutation,
+  title={Mutation clearance after transplantation for myelodysplastic syndrome},
+  author={Duncavage, Eric J and Jacoby, Meagan A and Chang, Gue Su and Miller, Christopher A and Edwin, Natasha and Shao, Jin and Elliott, Kevin and Robinson, Joshua and Abel, Haley and Fulton, Robert S and others},
+  journal={New England Journal of Medicine},
+  volume={379},
+  number={11},
+  pages={1028--1041},
+  year={2018},
+  publisher={Mass Medical Soc},
+  url={https://www.nejm.org/doi/full/10.1056/NEJMoa1804714},
+  doi={doi:10.1056/NEJMoa1804714}
 }
