updating citation list

--- a/citations.bib
+++ b/citations.bib
@@ -840,3 +840,76 @@
   url={https://www.nejm.org/doi/full/10.1056/NEJMoa1804714},
   doi={doi:10.1056/NEJMoa1804714}
 }
+
+@article{johanns2019detection,
+  title={Detection of neoantigen-specific T cells following a personalized vaccine in a patient with glioblastoma},
+  author={Johanns, Tanner M and Miller, Christopher A and Liu, Connor J and Perrin, Richard J and Bender, Diane and Kobayashi, Dale K and Campian, Jian L and Chicoine, Michael R and Dacey, Ralph G and Huang, Jiayi and others},
+  journal={OncoImmunology},
+  volume={8},
+  number={4},
+  pages={e1561106},
+  year={2019},
+  publisher={Taylor \& Francis},
+  url={https://www.tandfonline.com/doi/full/10.1080/2162402X.2018.1561106},
+  doi={doi:10.1080/2162402X.2018.1561106}
+}
+
+@article{ghobadi2019shared,
+  title={Shared cell of origin in a patient with Erdheim-Chester disease},
+  author={Ghobadi, A and Miller, CA and Li, T and O'Laughlin, M and Lee, YS and Ali, M and Westervelt, P and DiPersio, JF and Wartman, L},
+  journal={Haematologica},
+  volume={104},
+  number={8},
+  pages={e373--e375},
+  year={2019},
+  url={http://www.haematologica.org/content/104/8/e373.long},
+  doi={doi:10.3324/haematol.2019.217794}
+}
+
+@article{wang2019smc3,
+  title={Smc3 is required for mouse embryonic and adult hematopoiesis},
+  author={Wang, Tianjiao and Glover, Brandi and Hadwiger, Gayla and Miller, Christopher A and di Martino, Orsola and Welch, John S},
+  journal={Experimental hematology},
+  volume={70},
+  pages={70--84},
+  year={2019},
+  publisher={Elsevier},
+  url={https://www.sciencedirect.com/science/article/pii/S0301472X18309809},
+  doi={doi:10.1016/j.exphem.2018.11.008}
+}
+
+@article{christopher2018immune,
+  title={Immune escape of relapsed AML cells after allogeneic transplantation},
+  author={Christopher, Matthew J and Petti, Allegra A and Rettig, Michael P and Miller, Christopher A and Chendamarai, Ezhilarasi and Duncavage, Eric J and Klco, Jeffery M and Helton, Nicole M and O’Laughlin, Michelle and Fronick, Catrina C and others},
+  journal={New England Journal of Medicine},
+  volume={379},
+  number={24},
+  pages={2330--2341},
+  year={2018},
+  publisher={Mass Medical Soc},
+  url={https://www.nejm.org/doi/full/10.1056/NEJMoa1808777},
+  doi={doi:10.1056/NEJMoa1808777}
+}
+
+@article{wang2019exome,
+  title={Exome analysis of treatment-related AML after APL suggests secondary evolution.},
+  author={Wang, Tianjiao and Jacoby, Meagan A and Duncavage, Eric J and Miller, Christopher A and Heath, Sharon and Rahme, Ramy and Fenaux, Pierre and Ades, Lionel and Renneville, Aline and Cassinat, Bruno and others},
+  journal={British journal of haematology},
+  volume={185},
+  number={5},
+  pages={984},
+  year={2019},
+  url={https://onlinelibrary.wiley.com/doi/full/10.1111/bjh.15681},
+  doi={doi:10.1111/bjh.15681}
+}
+
+@article{hundal2019pvactools,
+  title={pVACtools: a computational toolkit to identify and visualize cancer neoantigens},
+  author={Hundal, Jasreet and Kiwala, Susanna and McMichael, Joshua and Miller, Christopher A and Wollam, Alexander T and Xia, Huiming and Liu, Connor J and Zhao, Sidi and Feng, Yang-Yang and Graubert, Aaron P and others},
+  journal={bioRxiv},
+  pages={501817},
+  year={2019},
+  publisher={Cold Spring Harbor Laboratory},
+  url={https://www.biorxiv.org/content/10.1101/501817v2.abstract},
+  doi={doi:10.1101/501817}
+}
