missed a co-first pub

--- a/citations.bib
+++ b/citations.bib
@@ -856,7 +856,7 @@
 
 @article{ghobadi2019shared,
   title={Shared cell of origin in a patient with Erdheim-Chester disease},
-  author={Ghobadi, A and Miller, CA and Li, T and O'Laughlin, M and Lee, YS and Ali, M and Westervelt, P and DiPersio, JF and Wartman, L},
+  author={Ghobadi, A* and Miller, CA* and Li, T and O'Laughlin, M and Lee, YS and Ali, M and Westervelt, P and DiPersio, JF and Wartman, L},
   journal={Haematologica},
   volume={104},
   number={8},
