adding lectures and pubs

--- a/citations.bib
+++ b/citations.bib
@@ -723,17 +723,6 @@
   url={http://www.haematologica.org/content/103/6/e270}
 }
 
-@article{griffith2017prognostic,
-  title={The prognostic effects of somatic mutations in ER-positive breast cancer},
-  author={Griffith, Obi L and Spies, Nicholas C and Anurag, Meenakshi and Griffith, Malachi and Luo, Jingqin and Tu, Dongsheng and Yeo, Belinda and Kunisaki, Jason and Miller, Christopher A and Krysiak, Kilannin and others},
-  journal={bioRxiv},
-  pages={235846},
-  year={2017},
-  publisher={Cold Spring Harbor Laboratory},
-  doi={doi:10.1101/235846},
-  url={https://www.biorxiv.org/content/early/2017/12/19/235846}
-}
-
 @article{miller2018resistance,
   title={Resistance-promoting effects of ependymoma treatment revealed through genomic analysis of multiple recurrences in a single patient},
   author={Miller, Christopher A and Dahiya, Sonika and Li, Tiandao and Fulton, Robert S and Smyth, Matthew D and Dunn, Gavin P and Rubin, Joshua B and Mardis, Elaine R},
@@ -815,17 +804,6 @@
   publisher={Nature Publishing Group},
   doi={doi:10.1038/s41467-018-05914-x},
   url={https://www.nature.com/articles/s41467-018-05914-x}
-}
-
-@article{petti2018mutation,
-  title={Mutation detection in thousands of acute myeloid leukemia cells using single cell RNA-sequencing},
-  author={Petti, Allegra A and Williams, Stephen R and Miller, Christopher A and Fiddes, Ian T and Srivatsan, Sridhar N and Chen, David Y and Fronick, Catrina C and Fulton, Robert S and Church, Deanna M and Ley, Timothy J},
-  journal={bioRxiv},
-  pages={434746},
-  year={2018},
-  publisher={Cold Spring Harbor Laboratory},
-  doi={doi:10.1101/434746},
-  url={https://www.biorxiv.org/content/early/2018/10/17/434746.1}
 }
 
 @article{duncavage2018mutation,
@@ -912,4 +890,17 @@
   publisher={Cold Spring Harbor Laboratory},
   url={https://www.biorxiv.org/content/10.1101/501817v2.abstract},
   doi={doi:10.1101/501817}
+}
+
+@article{petti2019general,
+  title={A general approach for detecting expressed mutations in AML cells using single cell RNA-sequencing},
+  author={Petti, Allegra A and Williams, Stephen R and Miller, Christopher A and Fiddes, Ian T and Srivatsan, Sridhar N and Chen, David Y and Fronick, Catrina C and Fulton, Robert S and Church, Deanna M and Ley, Timothy J},
+  journal={Nature communications},
+  volume={10},
+  number={1},
+  pages={1--16},
+  year={2019},
+  publisher={Nature Publishing Group}
+  url={https://www.nature.com/articles/s41467-019-11591-1},
+  doi={doi:10.1038/s41467-019-11591-1}
 }
