--- a/citations.bib
+++ b/citations.bib
@@ -900,7 +900,7 @@
   number={1},
   pages={1--16},
   year={2019},
-  publisher={Nature Publishing Group}
+  publisher={Nature Publishing Group},
   url={https://www.nature.com/articles/s41467-019-11591-1},
   doi={doi:10.1038/s41467-019-11591-1}
 }
