--- a/citations.bib
+++ b/citations.bib
@@ -904,3 +904,51 @@
   url={https://www.nature.com/articles/s41467-019-11591-1},
   doi={doi:10.1038/s41467-019-11591-1}
 }
+
+@article{hundal2020pvactools,
+  title={pVACtools: a computational toolkit to identify and visualize cancer neoantigens},
+  author={Hundal, Jasreet and Kiwala, Susanna and McMichael, Joshua and Miller, Christopher A and Xia, Huiming and Wollam, Alexander T and Liu, Connor J and Zhao, Sidi and Feng, Yang-Yang and Graubert, Aaron P and others},
+  journal={Cancer immunology research},
+  volume={8},
+  number={3},
+  pages={409--420},
+  year={2020},
+  publisher={American Association for Cancer Research},
+  url={https://cancerimmunolres.aacrjournals.org/content/early/2020/01/04/2326-6066.CIR-19-0401},
+  doi={doi: 10.1158/2326-6066.CIR-19-0401}
+}
+
+@article{ketkar2020remethylation,
+  title={Remethylation of Dnmt3a-/- hematopoietic cells is associated with partial correction of gene dysregulation and reduced myeloid skewing},
+  author={Ketkar, Shamika and Verdoni, Angela M and Smith, Amanda M and Bangert, Celia V and Leight, Elizabeth R and Chen, David Y and Brune, Meryl K and Helton, Nichole M and Hoock, Mieke and George, Daniel R and others},
+  journal={Proceedings of the National Academy of Sciences},
+  volume={117},
+  number={6},
+  pages={3123--3134},
+  year={2020},
+  publisher={National Acad Sciences},
+  url={https://www.pnas.org/content/early/2020/01/28/1918611117},
+  doi={doi: 10.1073/pnas.1918611117}
+}
+
+@article{liu2020treatment,
+  title={Treatment of an aggressive orthotopic murine glioblastoma model with combination checkpoint blockade and a multivalent neoantigen vaccine},
+  author={Liu, Connor J and Schaettler, Maximilian and Blaha, Dylan T and Bowman-Kirigin, Jay A and Kobayashi, Dale K and Livingstone, Alexandra J and Bender, Diane and Miller, Christopher A and Kranz, David M and Johanns, Tanner M and others},
+  journal={Neuro-oncology},
+  year={2020},
+  url={https://academic.oup.com/neuro-oncology/advance-article/doi/10.1093/neuonc/noaa050/5781186},
+  doi={doi: 10.1093/neuonc/noaa050}
+}
+
+@article{moon2020unmasking,
+  title={Unmasking Intra-tumoral Heterogeneity and Clonal Evolution in NF1-MPNST},
+  author={Moon, Chang-In and Tompkins, William and Wang, Yuxi and Godec, Abigail and Zhang, Xiaochun and Pipkorn, Patrik and Miller, Christopher A and Dehner, Carina and Dahiya, Sonika and Hirbe, Angela C},
+  journal={Genes},
+  volume={11},
+  number={5},
+  pages={499},
+  year={2020},
+  publisher={Multidisciplinary Digital Publishing Institute},
+  url={https://www.mdpi.com/2073-4425/11/5/499},
+  doi={doi: 10.3390/genes11050499}
+}
