--- a/citations.bib
+++ b/citations.bib
@@ -952,3 +952,16 @@
   url={https://www.mdpi.com/2073-4425/11/5/499},
   doi={doi: 10.3390/genes11050499}
 }
+
+@article{dang2020clonal,
+  title={The clonal evolution of metastatic colorectal cancer},
+  author={Dang, Ha X and Krasnick, Bradley A and White, Brian S and Grossman, Julie G and Strand, Matthew S and Zhang, Jin and Cabanski, Christopher R and Miller, Christopher A and Fulton, Robert S and Goedegebuure, S Peter and others},
+  journal={Science Advances},
+  volume={6},
+  number={24},
+  pages={eaay9691},
+  year={2020},
+  publisher={American Association for the Advancement of Science},
+  url={https://www.ncbi.nlm.nih.gov/pmc/articles/PMC7286679/},
+  doi={doi: 10.1126/sciadv.aay9691 }
+}
