--- a/citations.bib
+++ b/citations.bib
@@ -684,7 +684,7 @@
   pages={4061},
   year={2018},
   publisher={Impact Journals, LLC},
-  doi={doi: 10.18632/oncotarget.23664},
+  doi={doi:10.18632/oncotarget.23664},
   url={https://www.ncbi.nlm.nih.gov/pmc/articles/PMC5790521/}
 }
 
@@ -915,7 +915,7 @@
   year={2020},
   publisher={American Association for Cancer Research},
   url={https://cancerimmunolres.aacrjournals.org/content/early/2020/01/04/2326-6066.CIR-19-0401},
-  doi={doi: 10.1158/2326-6066.CIR-19-0401}
+  doi={doi:10.1158/2326-6066.CIR-19-0401}
 }
 
 @article{ketkar2020remethylation,
@@ -928,7 +928,7 @@
   year={2020},
   publisher={National Acad Sciences},
   url={https://www.pnas.org/content/early/2020/01/28/1918611117},
-  doi={doi: 10.1073/pnas.1918611117}
+  doi={doi:10.1073/pnas.1918611117}
 }
 
 @article{liu2020treatment,
@@ -937,7 +937,7 @@
   journal={Neuro-oncology},
   year={2020},
   url={https://academic.oup.com/neuro-oncology/advance-article/doi/10.1093/neuonc/noaa050/5781186},
-  doi={doi: 10.1093/neuonc/noaa050}
+  doi={doi:10.1093/neuonc/noaa050}
 }
 
 @article{moon2020unmasking,
@@ -950,7 +950,7 @@
   year={2020},
   publisher={Multidisciplinary Digital Publishing Institute},
   url={https://www.mdpi.com/2073-4425/11/5/499},
-  doi={doi: 10.3390/genes11050499}
+  doi={doi:10.3390/genes11050499}
 }
 
 @article{dang2020clonal,
@@ -963,5 +963,171 @@
   year={2020},
   publisher={American Association for the Advancement of Science},
   url={https://www.ncbi.nlm.nih.gov/pmc/articles/PMC7286679/},
-  doi={doi: 10.1126/sciadv.aay9691 }
+  doi={doi:10.1126/sciadv.aay9691 }
+}
+
+@article{oza2020interleukin,
+  title={Interleukin-15 superagonist (N-803) treatment of PML and JCV in a post--allogeneic hematopoietic stem cell transplant patient},
+  author={Oza, Aabha and Rettig, Michael P and Powell, Phil and O’Brien, Kathryn and Clifford, David B and Ritchey, Julie and Gehrs, Leah and Hollaway, Julia and Major, Eugene and Fehniger, Todd A and others},
+  journal={Blood Advances},
+  volume={4},
+  number={11},
+  pages={2387-2391},
+  year={2020},
+  publisher={American Society of Hematology Washington, DC},
+  url={https://ashpublications.org/bloodadvances/article/4/11/2387/460597},
+  doi={doi:10.1182/bloodadvances.2019000664}
+}
+
+@article{liu2020treatment,
+  title={Treatment of an aggressive orthotopic murine glioblastoma model with combination checkpoint blockade and a multivalent neoantigen vaccine},
+  author={Liu, Connor J and Schaettler, Maximilian and Blaha, Dylan T and Bowman-Kirigin, Jay A and Kobayashi, Dale K and Livingstone, Alexandra J and Bender, Diane and Miller, Christopher A and Kranz, David M and Johanns, Tanner M and others},
+  journal={Neuro-oncology},
+  volume={22},
+  number={9},
+  pages={1276--1288},
+  year={2020},
+  publisher={Oxford University Press US},
+  url={https://academic.oup.com/neuro-oncology/article/22/9/1276/5781186?login=true},
+  doi={doi:10.1093/neuonc/noaa050}
+}
+
+@article{li2021optimized,
+  title={Optimized polyepitope neoantigen DNA vaccines elicit neoantigen-specific immune responses in preclinical models and in clinical translation},
+  author={Li, Lijin and Zhang, Xiuli and Wang, Xiaoli and Kim, Samuel W and Herndon, John M and Becker-Hapak, Michelle K and Carreno, Beatriz M and Myers, Nancy B and Sturmoski, Mark A and McLellan, Michael D and others},
+  journal={Genome medicine},
+  volume={13},
+  number={1},
+  pages={1--13},
+  year={2021},
+  publisher={BioMed Central},
+  url={https://genomemedicine.biomedcentral.com/articles/10.1186/s13073-021-00872-4},
+  doi={doi:10.1186/s13073-021-00872-4}
+}
+
+@article{chen2021dnmt3a,
+  title={Dnmt3a deficiency in the skin causes focal, canonical DNA hypomethylation and a cellular proliferation phenotype},
+  author={Chen, David Y and Ferguson, Ian M and Braun, Krista A and Sutton, Leslie A and Helton, Nichole M and Ramakrishnan, Sai Mukund and Smith, Amanda M and Miller, Christopher A and Ley, Timothy J},
+  journal={Proceedings of the National Academy of Sciences},
+  volume={118},
+  number={16},
+  year={2021},
+  publisher={National Acad Sciences},
+  url={https://www.pnas.org/content/118/16/e2022760118.short},
+  doi={doi:10.1073/pnas.2022760118}
+}
+
+@article{inkman2020hpv,
+  title={HPV-EM: an accurate HPV detection and genotyping EM algorithm},
+  author={Inkman, Matthew J and Jayachandran, Kay and Ellis, Thomas M and Ruiz, Fiona and McLellan, Michael D and Miller, Christopher A and Wu, Yufeng and Ojesina, Akinyemi I and Schwarz, Julie K and Zhang, Jin},
+  journal={Scientific reports},
+  volume={10},
+  number={1},
+  pages={1--12},
+  year={2020},
+  publisher={Nature Publishing Group},
+  url={https://www.nature.com/articles/s41598-020-71300-7},
+  doi={doi:10.1038/s41598-020-71300-7}
+}
+
+@article{wells2020key,
+  title={Key parameters of tumor epitope immunogenicity revealed through a consortium approach improve neoantigen prediction},
+  author={Wells, Daniel K and van Buuren, Marit M and Dang, Kristen K and Hubbard-Lucey, Vanessa M and Sheehan, Kathleen CF and Campbell, Katie M and Lamb, Andrew and Ward, Jeffrey P and Sidney, John and Blazquez, Ana B and others},
+  journal={Cell},
+  volume={183},
+  number={3},
+  pages={818--834},
+  year={2020},
+  publisher={Elsevier},
+  url={https://www.sciencedirect.com/science/article/pii/S0092867420311569},
+  doi={doi:10.1016/j.cell.2020.09.015}
+}
+
+@article{li2021enhanced,
+  title={Enhanced efficacy and increased long-term toxicity of CNS-directed, AAV-based combination therapy for Krabbe disease},
+  author={Li, Yedda and Miller, Christopher A and Shea, Lauren K and Jiang, Xuntian and Guzman, Miguel A and Chandler, Randy J and Ramakrishnan, Sai M and Smith, Stephanie N and Venditti, Charles P and Vogler, Carole A and others},
+  journal={Molecular Therapy},
+  volume={29},
+  number={2},
+  pages={691--701},
+  year={2021},
+  publisher={Elsevier},
+  url={https://www.sciencedirect.com/science/article/pii/S1525001620307243},
+  doi={doi:10.1016/j.ymthe.2020.12.031}
+}
+
+@article{duncavage2021genome,
+  title={Genome sequencing as an alternative to cytogenetic analysis in myeloid cancers},
+  author={Duncavage, Eric J and Schroeder, Molly C and O’Laughlin, Michele and Wilson, Roxanne and MacMillan, Sandra and Bohannon, Andrew and Kruchowski, Scott and Garza, John and Du, Feiyu and Hughes, Andrew EO and others},
+  journal={New England Journal of Medicine},
+  volume={384},
+  number={10},
+  pages={924--935},
+  year={2021},
+  publisher={Mass Medical Soc},
+  url={https://www.nejm.org/doi/full/10.1056/NEJMoa2024534},
+  doi={doi:10.1056/NEJMoa2024534}
+}
+
+@article{miller2021failure,
+  title={Failure to detect mutations in U2AF1 due to changes in the GRCh38 reference sequence},
+  author={Miller, Christopher A and Walker, Jason R and Jensen, Travis L and Hooper, William F and Fulton, Robert S and Painter, Jeffrey S and Sekeres, Mikkael A and Ley, Timothy J and Spencer, David H and Goll, Johannes B and others},
+  journal={bioRxiv},
+  year={2021},
+  publisher={Cold Spring Harbor Laboratory},
+  url={https://www.biorxiv.org/content/10.1101/2021.05.07.442430v1.abstract},
+  doi={doi:10.1101/2021.05.07.442430 }
+}
+
+@article{wilson2021genome,
+  title={Genome-wide analysis of focal DNA hypermethylation in IDH-mutant AML samples},
+  author={Wilson, Elisabeth R and Helton, Nichole and Heath, Sharon E and Fulton, Robert S and Miller, Christopher and Payton, Jacqueline E and Welch, John S and Walter, Matthew and Westervelt, Peter and DiPersio, John F and others},
+  journal={bioRxiv},
+  year={2021},
+  publisher={Cold Spring Harbor Laboratory},
+  url={https://www.biorxiv.org/content/10.1101/2021.03.03.433799v2.abstract},
+  doi={doi:10.1101/2021.03.03.433799 }
+}
+
+@article{khanna2021bam,
+  title={Bam-readcount-rapid generation of basepair-resolution sequence metrics},
+  author={Khanna, Ajay and Larson, David E and Srivatsan, Sridhar Nonavinkere and Mosior, Matthew and Abbott, Travis E and Kiwala, Susanna and Ley, Timothy J and Duncavage, Eric J and Walter, Matthew J and Walker, Jason R and others},
+  journal={ArXiv},
+  year={2021},
+  publisher={arXiv},
+  url={https://arxiv.org/abs/2107.12817},
+  doi={doi:arXiv:2107.12817}
+}
+
+@article{katerndahl2021tumor,
+  title={Tumor suppressor function of Gata2 in Acute Promyelocytic Leukemia},
+  author={Katerndahl, Casey DS and Rogers, Olivia RS and Day, Ryan B and Cai, Michelle A and Rooney, Timothy P and Helton, Nichole M and Hoock, Mieke and Ramakrishnan, Sai Mukund and Srivatsan, Sridhar Nonavinkere and Wartman, Lukas D and others},
+  journal={Blood},
+  year={2021},
+  publisher={Elsevier},
+  url={https://www.sciencedirect.com/science/article/pii/S0006497121012349},
+  doi={doi:10.1182/blood.2021011758}
+}
+
+@article{smith2021functional,
+  title={Functional and epigenetic phenotypes of humans and mice with DNMT3A Overgrowth Syndrome},
+  author={Smith, Amanda M and LaValle, Taylor A and Shinawi, Marwan and Ramakrishnan, Sai M and Abel, Haley J and Hill, Cheryl A and Kirkland, Nicole M and Rettig, Michael P and Helton, Nichole M and Heath, Sharon E and others},
+  journal={Nature communications},
+  volume={12},
+  number={1},
+  pages={1--18},
+  year={2021},
+  publisher={Nature Publishing Group},
+  url={https://www.nature.com/articles/s41467-021-24800-7},
+  doi={doi:10.1038/s41467-021-24800-7}
+}
+
+@article{tian2021kdm6a,
+  title={Kdm6a Deficiency Restricted to Mouse Hematopoietic Cells Causes an Age-and Sex-dependent Myelodysplastic Syndrome-Like Phenotype},
+  author={Tian, Ling and Chavez, Monique and Chang, Gue Su and Helton, Nichole M and Katerndahl, Casey DS and Miller, Christopher A and Wartman, Lukas},
+  journal={bioRxiv},
+  year={2021},
+  publisher={Cold Spring Harbor Laboratory},
+  url={https://www.biorxiv.org/content/10.1101/2021.08.04.455117v1},
+  doi={doi:10.1101/2021.08.04.455117}
 }
