--- a/citations.bib
+++ b/citations.bib
@@ -440,6 +440,19 @@
   doi={doi:10.1101/mcs.a000687}
 }
 
+@article{gellert2016impact,
+  title={Impact of mutational profiles on response of primary oestrogen receptor-positive breast cancers to oestrogen deprivation},
+  author={Gellert, Pascal and Segal, Corrinne V and Gao, Qiong and L{\'o}pez-Knowles, Elena and Martin, Lesley-Ann and Dodson, Andrew and Li, Tiandao and Miller, Christopher A and Lu, Charles and Mardis, Elaine R and others},
+  journal={Nature communications},
+  volume={7},
+  number={1},
+  pages={1--11},
+  year={2016},
+  publisher={Nature Publishing Group},
+  url={https://www.nature.com/articles/ncomms13294},
+  doi={doi:c10.1038/ncomms13294}
+}
+
 @article{purkait2016atrx,
   title={ATRX in diffuse gliomas with its mosaic/heterogeneous expression in a subset},
   author={Purkait, Suvendu and Miller, Christopher A and Kumar, Anupam and Sharma, Vikas and Pathak, Pankaj and Jha, Prerana and Sharma, Mehar Chand and Suri, Vaishali and Suri, Ashish and Sharma, BS and others},
@@ -448,6 +461,18 @@
   publisher={Wiley Online Library},
   url={http://onlinelibrary.wiley.com/doi/10.1111/bpa.12364/abstract},
   doi={doi:10.1111/bpa.12364}
+}
+
+@inproceedings{hundal2016cancer,
+  title={Cancer immunogenomics: computational neoantigen identification and vaccine design},
+  author={Hundal, Jasreet and Miller, Christopher A and Griffith, Malachi and Griffith, Obi L and Walker, Jason and Kiwala, Susanna and Graubert, Aaron and McMichael, Joshua and Coffman, Adam and Mardis, Elaine R},
+  booktitle={Cold Spring Harbor symposia on quantitative biology},
+  volume={81},
+  pages={105--111},
+  year={2016},
+  organization={Cold Spring Harbor Laboratory Press},
+  url={http://symposium.cshlp.org/content/81/105.full},
+  doi={10.1101/sqb.2016.81.030726}
 }
 
 @article{griffith2016comprehensive,
@@ -1030,6 +1055,26 @@
   doi={doi:10.1038/s41598-020-71300-7}
 }
 
+@article{xia2020accurate,
+  title={Accurate neoantigen prediction depends on mutation position relative to patient allele-specific MHC anchor location},
+  author={Xia, Huiming and McMichael, Joshua F and Supabphol, Suangson and Richters, Megan M and Basu, Anamika and Ramirez, Cody A and Puig-Saus, Cristina and Cotto, Kelsy C and Hundal, Jasreet and Kiwala, Susanna and others},
+  journal={bioRxiv},
+  year={2020},
+  publisher={Cold Spring Harbor Laboratory},
+  url={https://www.biorxiv.org/content/10.1101/2020.12.08.416271v1.abstract},
+  doi={doi:10.1101/2020.12.08.416271}
+}
+
+@article{wadugu2020u2af1,
+  title={U2AF1 is a haplo-essential gene required for cancer cell survival},
+  author={Wadugu, Brian A and Heard, Amanda and Srivatsan, Sridhar N and Alberti, Michael O and Ndonwi, Matthew and Grieb, Sarah and Bradley, Joseph and Shao, Jin and Ahmed, Tanzir and Shirai, Cara L and others},
+  journal={bioRxiv},
+  year={2020},
+  publisher={Cold Spring Harbor Laboratory},
+  url={https://www.biorxiv.org/content/10.1101/2020.06.20.151035v1.abstract},
+  doi={doi:10.1101/2020.06.20.151035}
+}
+
 @article{wells2020key,
   title={Key parameters of tumor epitope immunogenicity revealed through a consortium approach improve neoantigen prediction},
   author={Wells, Daniel K and van Buuren, Marit M and Dang, Kristen K and Hubbard-Lucey, Vanessa M and Sheehan, Kathleen CF and Campbell, Katie M and Lamb, Andrew and Ward, Jeffrey P and Sidney, John and Blazquez, Ana B and others},
@@ -1089,14 +1134,26 @@
   doi={doi:10.1101/2021.03.03.433799 }
 }
 
-@article{khanna2021bam,
-  title={Bam-readcount-rapid generation of basepair-resolution sequence metrics},
-  author={Khanna, Ajay and Larson, David E and Srivatsan, Sridhar Nonavinkere and Mosior, Matthew and Abbott, Travis E and Kiwala, Susanna and Ley, Timothy J and Duncavage, Eric J and Walter, Matthew J and Walker, Jason R and others},
-  journal={ArXiv},
+@article{ruiz2021hpv,
+  title={HPV transcript expression affects cervical cancer response to chemoradiation},
+  author={Ruiz, Fiona J and Inkman, Matthew and Rashmi, Ramachandran and Muhammad, Naoshad and Gabriel, Nishanth and Miller, Christopher A and McLellan, Michael D and Goldstein, Michael and Markovina, Stephanie and Grigsby, Perry W and others},
+  journal={JCI insight},
   year={2021},
-  publisher={arXiv},
-  url={https://arxiv.org/abs/2107.12817},
-  doi={doi:arXiv:2107.12817}
+  publisher={Am Soc Clin Investig},
+  url={https://insight.jci.org/articles/view/138734},
+  doi={10.1172/jci.insight.138734}
+}
+
+@article{dehner2021chromosome,
+  title={Chromosome 8 gain is associated with high-grade transformation in MPNST},
+  author={Dehner, Carina and Moon, Chang In and Zhang, Xiyuan and Zhou, Zhaohe and Miller, Chris and Xu, Hua and Wan, Xiaodan and Yang, Kuangying and Mashl, Jay and Gosline, Sara JC and others},
+  journal={JCI insight},
+  volume={6},
+  number={6},
+  year={2021},
+  publisher={American Society for Clinical Investigation},
+  url={https://www.ncbi.nlm.nih.gov/pmc/articles/PMC8026192/},
+  doi={doi:10.1172/jci.insight.146351}
 }
 
 @article{katerndahl2021tumor,
@@ -1130,4 +1187,24 @@
   publisher={Cold Spring Harbor Laboratory},
   url={https://www.biorxiv.org/content/10.1101/2021.08.04.455117v1},
   doi={doi:10.1101/2021.08.04.455117}
+}
+
+@article{khanna2021bam,
+  title={Bam-readcount-rapid generation of basepair-resolution sequence metrics},
+  author={Khanna, Ajay and Larson, David E and Srivatsan, Sridhar Nonavinkere and Mosior, Matthew and Abbott, Travis E and Kiwala, Susanna and Ley, Timothy J and Duncavage, Eric J and Walter, Matthew J and Walker, Jason R and others},
+  journal={ArXiv},
+  year={2021},
+  publisher={arXiv},
+  url={https://arxiv.org/abs/2107.12817},
+  doi={doi:arXiv:2107.12817}
+}
+
+@article{ruiz2021hpv,
+  title={HPV transcript expression affects cervical cancer response to chemoradiation},
+  author={Ruiz, Fiona J and Inkman, Matthew and Rashmi, Ramachandran and Muhammad, Naoshad and Gabriel, Nishanth and Miller, Christopher A and McLellan, Michael D and Goldstein, Michael and Markovina, Stephanie and Grigsby, Perry W and others},
+  journal={JCI insight},
+  year={2021},
+  publisher={Am Soc Clin Investig},
+  url={https://insight.jci.org/articles/view/138734},
+  doi={doi:10.1172/jci.insight.138734}
 }
