--- a/citations.bib
+++ b/citations.bib
@@ -546,15 +546,15 @@
 }
 
 @article{miller2016visualising,
-	title={Visualizing tumor evolution with the fishplot package for R},
-	author={Miller, Christopher A. and McMichael, Joshua and Dang, Ha X. and Maher, Christopher A. and Ding, Li and Ley, Timothy J. and Mardis, Elaine R. and Wilson, Richard K.},
-	journal={BMC Genomics},
-	year={2016},
-	volume={17},
-	number={1},
-	pages={880},
-	doi={10.1186/s12864-016-3195-z},
-	url={https://bmcgenomics.biomedcentral.com/articles/10.1186/s12864-016-3195-z}
+  title={Visualizing tumor evolution with the fishplot package for R},
+  author={Miller, Christopher A. and McMichael, Joshua and Dang, Ha X. and Maher, Christopher A. and Ding, Li and Ley, Timothy J. and Mardis, Elaine R. and Wilson, Richard K.},
+  journal={BMC Genomics},
+  year={2016},
+  volume={17},
+  number={1},
+  pages={880},
+  doi={10.1186/s12864-016-3195-z},
+  url={https://bmcgenomics.biomedcentral.com/articles/10.1186/s12864-016-3195-z}
 }
 
 @article{welch2016tp53,
@@ -1207,4 +1207,161 @@
   publisher={Am Soc Clin Investig},
   url={https://insight.jci.org/articles/view/138734},
   doi={doi:10.1172/jci.insight.138734}
+}
+
+@article{ferraro2021immunosuppression,
+  title={Immunosuppression and outcomes in adult patients with de novo acute myeloid leukemia with normal karyotypes},
+  author={Ferraro, Francesca* and Miller, Christopher A* and Christensen, Keegan A and Helton, Nichole M and O’Laughlin, Margaret and Fronick, Catrina C and Fulton, Robert S and Kohlschmidt, Jessica and Eisfeld, Ann-Kathrin and Bloomfield, Clara D and others},
+  journal={Proceedings of the National Academy of Sciences},
+  volume={118},
+  number={49},
+  pages={e2116427118},
+  year={2021},
+  publisher={National Academy of Sciences},
+  url={https://www.pnas.org/doi/full/10.1073/pnas.2116427118},
+  doi={10.1073/pnas.2116427118}
+}
+
+@article{wilson2022focal,
+  title={Focal disruption of DNA methylation dynamics at enhancers in IDH-mutant AML cells},
+  author={Wilson, Elisabeth R and Helton, Nichole M and Heath, Sharon E and Fulton, Robert S and Payton, Jacqueline E and Welch, John S and Walter, Matthew J and Westervelt, Peter and DiPersio, John F and Link, Daniel C and others},
+  journal={Leukemia},
+  volume={36},
+  number={4},
+  pages={935--945},
+  year={2022},
+  publisher={Nature Publishing Group},
+  url={https://www.nature.com/articles/s41375-021-01476-y},
+  doi={doi:10.1038/s41375-021-01476-y }
+}
+
+@article{christopher2022tumor,
+  title={Tumor suppressor function of WT1 in acute promyelocytic leukemia},
+  author={Christopher, Matthew J and Katerndahl, Casey DS and LeBlanc, Hayley R and Elmendorf, Tyler T and Basu, Vaishali and Gang, Margery and Menssen, Andrew J and Spencer, David H and Duncavage, Eric J and Ketkar, Shamika and others},
+  journal={haematologica},
+  volume={107},
+  number={1},
+  pages={342},
+  year={2022},
+  publisher={Ferrata Storti Foundation},
+  url={https://www.ncbi.nlm.nih.gov/pmc/articles/PMC8719088/},
+  doi={doi:10.3324/haematol.2021.279601}
+}
+
+@article{skidmore2022genomic,
+  title={Genomic and transcriptomic somatic alterations of hepatocellular carcinoma in non-cirrhotic livers},
+  author={Skidmore, Zachary L and Kunisaki, Jason and Lin, Yiing and Cotto, Kelsy C and Barnell, Erica K and Hundal, Jasreet and Krysiak, Kilannin and Magrini, Vincent and Trani, Lee and Walker, Jason R and others},
+  journal={Cancer Genetics},
+  volume={264},
+  pages={90--99},
+  year={2022},
+  publisher={Elsevier},
+  url={https://www.sciencedirect.com/science/article/pii/S2210776222000382},
+  doi={doi:10.1016/j.cancergen.2022.04.002}
+}
+
+@article{smith2022somatic,
+  title={Somatic Dnmt3a inactivation leads to slow, canonical DNA methylation loss in murine hematopoietic cells},
+  author={Smith, Amanda M and Verdoni, Angela M and Abel, Haley J and Chen, David Y and Ketkar, Shamika and Leight, Elizabeth R and Miller, Christopher A and Ley, Timothy J},
+  journal={Iscience},
+  volume={25},
+  number={4},
+  pages={104004},
+  year={2022},
+  publisher={Elsevier},
+  url={https://www.ncbi.nlm.nih.gov/pmc/articles/PMC8933692/},
+  doi={doi:10.1016/j.isci.2022.104004}
+}
+
+@article{miller2022efficient,
+  title={Efficient Algorithms Unlock Understanding of Clonal Evolution in Cancer},
+  author={Miller, Christopher A},
+  journal={Blood Cancer Discovery},
+  volume={3},
+  number={3},
+  pages={176--177},
+  year={2022},
+  publisher={American Association for Cancer Research},
+  url={https://aacrjournals.org/bloodcancerdiscov/article/3/3/176/694684/Efficient-Algorithms-Unlock-Understanding-of},
+  doi={doi:10.1158/2643-3230.BCD-22-0036 }
+}
+
+@article{ferraro2022decitabine,
+  title={Decitabine salvage for TP53-mutated, relapsed/refractory acute myeloid leukemia after cytotoxic induction therapy},
+  author={Ferraro, Francesca and Gruszczynska, Agata and Ruzinova, Marianna B and Miller, Christopher A and Percival, Mary Elizabeth and Uy, Geoffrey L and Pusic, Iskra and Jacoby, Meagan A and Christopher, Mathew J and Kim, Miriam Y and others},
+  journal={Haematologica},
+  volume={107},
+  number={7},
+  pages={1709},
+  year={2022},
+  publisher={Ferrata Storti Foundation},
+  url={https://www.ncbi.nlm.nih.gov/pmc/articles/PMC9244807/},
+  doi={doi:10.3324/haematol.2021.280153}
+}
+
+@article{ferris2022dnmt3a,
+  title={DNMT3A overgrowth syndrome is associated with the development of hematopoietic malignancies in children and young adults},
+  author={Ferris, Margaret A and Smith, Amanda M and Heath, Sharon E and Duncavage, Eric J and Oberley, Matthew and Freyer, David and Wynn, Robert and Douzgou, Sofia and Maris, John M and Reilly, Anne F and others},
+  journal={Blood, The Journal of the American Society of Hematology},
+  volume={139},
+  number={3},
+  pages={461--464},
+  year={2022},
+  publisher={American Society of Hematology Washington, DC},
+  url={https://ashpublications.org/blood/article/139/3/461/482663/DNMT3A-overgrowth-syndrome-is-associated-with-the},
+  doi={doi:10.1182/blood.2021014052 }
+}
+
+@article{petti2022genetic,
+  title={Genetic and transcriptional contributions to relapse in normal karyotype acute myeloid leukemia},
+  author={Petti, Allegra A and Khan, Saad M and Xu, Ziheng and Helton, Nichole and Fronick, Catrina C and Fulton, Robert and Ramakrishnan, Sai M and Nonavinkere Srivatsan, Sridhar and Heath, Sharon E and Westervelt, Peter and others},
+  journal={Blood Cancer Discovery},
+  number={1},
+  pages={32-49},
+  year={2022},
+  publisher={American Association for Cancer Research},
+  url={https://aacrjournals.org/bloodcancerdiscov/article-lookup/doi/10.1158/2643-3230.BCD-21-0050},
+  doi={doi:10.1158/2643-3230.BCD-21-0050 }
+}
+
+@article{upadhyay2022recurrent,
+  title={Recurrent transcriptional responses in AML and MDS patients treated with decitabine},
+  author={Upadhyay, Pawan and Beales, Jeremy and Shah, Nakul M and Gruszczynska, Agata and Miller, Christopher A and Petti, Allegra A and Ramakrishnan, Sai Mukund and Link, Daniel C and Ley, Timothy J and Welch, John S},
+  journal={Experimental Hematology},
+  year={2022},
+  publisher={Elsevier},
+  url={https://www.sciencedirect.com/science/article/pii/S0301472X22001564?via%3Dihub},
+  doi={doi:10.1016/j.exphem.2022.04.002}
+}
+
+@article{menssen2022convergent,
+  title={Convergent clonal evolution of signaling gene mutations is a hallmark of myelodysplastic syndrome progression},
+  author={Menssen, Andrew J and Khanna, Ajay and Miller, Christopher A and Nonavinkere Srivatsan, Sridhar and Chang, Gue Su and Shao, Jin and Robinson, Joshua and O'Laughlin, Michele and Fronick, Catrina C and Fulton, Robert S and others},
+  journal={Blood Cancer Discovery},
+  volume={3},
+  number={4},
+  pages={330--345},
+  year={2022},
+  publisher={American Association for Cancer Research},
+  url={https://aacrjournals.org/bloodcancerdiscov/article/3/4/330/705268/Convergent-Clonal-Evolution-of-Signaling-Gene},
+  doi={doi:10.1158/2643-3230.BCD-21-0155}
+}
+
+@article{ghobadi2022discovery,
+  title={Discovery of a novel genomic alteration that renders leukemic cells resistant to CD19-targeted immunotherapies},
+  author={Ghobadi, Armin and Landmann, Jack and Carter, Alun and Cooper, Matthew L and Selli, Mehmet Emrah and Chang, Jufang and Baker, Matthew and Miller, Christoper A and Ferraro, Francesca and Chen, David Y and others},
+  journal={Blood Advances},
+  year={2022},
+  url={https://ashpublications.org/bloodadvances/article/doi/10.1182/bloodadvances.2022007705/485992/Discovery-of-a-novel-genomic-alteration-that},
+  doi={doi:10.1182/bloodadvances.2022007705}
+}
+
+@article{kramer2022proteomic,
+  title={Proteomic and Phosphoproteomic Landscapes of Acute Myeloid Leukemia},
+  author={Kramer, Michael H and Zhang, Qiang and Sprung, Robert and Day, Ryan B and Erdmann-Gilmore, Petra and Li, Yang and Xu, Ziheng and Helton, Nichole M and George, Daniel R and Mi, Yiling and others},
+  journal={Blood},
+  year={2022},
+  publisher={Elsevier},
+  url={https://ashpublications.org/blood/article/doi/10.1182/blood.2022016033/486036/Proteomic-and-Phosphoproteomic-Landscapes-of-Acute},
+  doi={doi:10.1182/blood.2022016033}
 }
